src/test/deca/context/invalid/sansObjet/IntAffectationToFloat.deca
{
    int x = 2020;
    x = 1.5 + 2020;
}